--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
-  background-color: rgb(155, 190, 170);
+  background-color: rgb(108, 131, 166);
   color: white;
   margin: 0 auto;
-  max-width: 1800px;
+  max-width: 100%;
 }
 
    @tailwind base;
@@ -13,16 +13,9 @@ body {
     color: #f00;
     background-color: rgb(108, 239, 56);
 }
-.bglogin {
-  background-image: url(./assets/olivier.jpg);
-  /* background-size: cover; */
-  /* height: 100vh; */
-}
 
-.marquee-container {
-  width: 100%;
-  overflow: hidden;
-}
+
+
 
 .marquee-content {
   display: inline-block;
